Cleanup:   * Remove several conversions from raw types to Integer, Boolean, etc - these are     unnecessary with Java 5 autoboxing.  Most identified via PMD.
git-svn-id: https://jamwiki.svn.sourceforge.net/svnroot/jamwiki/wiki/trunk@2525 f65b7e76-0091-dd46-87ae-4bc0c949c03e