@@ -71,7 +71,7 @@ public class WikiCache {
 	 * @param value The object that is being stored in the cache.
 	 */
 	public static void addToCache(String cacheName, int key, Object value) {
-		WikiCache.addToCache(cacheName, new Integer(key), value);
+		WikiCache.addToCache(cacheName, Integer.valueOf(key), value);
 	}
 
 	/**
@@ -116,8 +116,8 @@ public class WikiCache {
 			defaultCacheConfiguration.setName("defaultCache");
 			configuration.addDefaultCache(defaultCacheConfiguration);
 			DiskStoreConfiguration diskStoreConfiguration = new DiskStoreConfiguration();
-//			diskStoreConfiguration.addExpiryThreadPool(new ThreadPoolConfiguration("", new Integer(5), new Integer(5)));
-//			diskStoreConfiguration.addSpoolThreadPool(new ThreadPoolConfiguration("", new Integer(5), new Integer(5)));
+//			diskStoreConfiguration.addExpiryThreadPool(new ThreadPoolConfiguration("", 5, 5));
+//			diskStoreConfiguration.addSpoolThreadPool(new ThreadPoolConfiguration("", 5, 5));
 			diskStoreConfiguration.setPath(directory.getPath());
 			configuration.addDiskStore(diskStoreConfiguration);
 			WikiCache.cacheManager = new CacheManager(configuration);
@@ -176,7 +176,7 @@ public class WikiCache {
 	 * @param key The key for the record that is being removed from the cache.
 	 */
 	public static void removeFromCache(String cacheName, int key) {
-		WikiCache.removeFromCache(cacheName, new Integer(key));
+		WikiCache.removeFromCache(cacheName, Integer.valueOf(key));
 	}
 
 	/**
@@ -211,6 +211,6 @@ public class WikiCache {
 	 *  object value.
 	 */
 	public static Element retrieveFromCache(String cacheName, int key) {
-		return WikiCache.retrieveFromCache(cacheName, new Integer(key));
+		return WikiCache.retrieveFromCache(cacheName, Integer.valueOf(key));
 	}
 }
